# ChicoryOS

./: .gitignore  .gn  .project_alt.json  BUILD.gn  CMakeLists.txt  README.md  build.sh  linux_env.sh  makefile  qemu.run  run-clang-format.sh
.github/workflows/: synestia.yml
Arch/: CMakeLists.txt
Arch/arm64/: CMakeLists.txt  CompileFlags.cmake  kernel.lds  register.c  smcc.c
Arch/arm64/boot/: boot.S  exception_el1.S  exception_el2.S  exception_el3.S
Arch/arm64/include/: common.h  register.h  smcc.h
CMake/: Setup.cmake
CMake/Setup/: CompileFlags.cmake
Docker/: Dockerfile  docker-compose.yml  entrypoint.sh
GN/: BUILDCONFIG.gn
GN/toolchain/: BUILD.gn
Hypervisor/: hypervisor.c
Kernel/: CMakeLists.txt  console.c  device.c  device_tree.c  init.c  power_manager.c
Kernel/drivers/: pl011.c
Kernel/drivers/interrupt/: gic400.c  gic400.h  gic_v3.c
Kernel/drivers/psci/: psci.c  psci.h
Kernel/drivers/timer/: generic_timer.c
Kernel/drivers/uart/: pl011.c
Kernel/include/: console.h  device.h  device_tree.h  dlist.h  power_manager.h  stddef.h
Scripts/: qemu.run
