OS_BASE_DIR = "/home/yang/ChicoryOS"
ARCH_DIR = "$OS_BASE_DIR/Arch"
KERNEL_DIR = "$OS_BASE_DIR/Kernel"
HYPERVISOR_DIR = "$OS_BASE_DIR/Hypervisor"
ARCH = "arm64"

executable("ChicoryOS") {
  # defines = []
  # include_dirs = []
  cflags = [
    "--target=arm64v8a-unknown-linux-elf",
    "-mcpu=cortex-a72",
    "-g"
  ]
  cflags_c = [
    "-nostdlib",
    "--no-standard-libraries"
  ]
  ldflags = [
    "--target=arm64v8a-unknown-linux-elf",
    "-fuse-ld=lld",
    "-T$ARCH_DIR/$ARCH/kernel.lds",
    "-mfpu=none",
    "-mfloat-abi=soft",
    "-nostdlib",
    "--no-standard-libraries",
    "-nostartfiles",
    "-mcpu=cortex-a72",
    "-v"
  ]
  sources = [
    "$ARCH_DIR/$ARCH/boot/boot.S",
    "$ARCH_DIR/$ARCH/boot/exception_el3.S",
    "$ARCH_DIR/$ARCH/boot/exception_el2.S",
    "$ARCH_DIR/$ARCH/boot/exception_el1.S",
    "$KERNEL_DIR/device_tree.c",
    "$KERNEL_DIR/device.c",
    "$KERNEL_DIR/console.c",
    "$KERNEL_DIR/drivers/uart/pl011.c",
    "$KERNEL_DIR/drivers/timer/generic_timer.c",
    "$KERNEL_DIR/drivers/interrupt/gic400.c",
    "$KERNEL_DIR/drivers/psci/psci.c",
    "$KERNEL_DIR/power_manager.c",
    "$KERNEL_DIR/init.c",
    "$HYPERVISOR_DIR/hypervisor.c",
  ]
}
