toolchain("clang") {
  tool("cc") {
    command = "clang -c {{source}} -o {{output}} {{defines}} {{include_dirs}} {{cflags}} {{cflags_c}} "
    description = "CC {{output}}"
    outputs =
        [ "{{source_out_dir}}/{{target_output_name}}.{{source_name_part}}.o" ]
  }

  tool("asm") {
    command = "clang -c {{source}} -o {{output}} {{defines}} {{include_dirs}} {{cflags}} {{cflags_c}} "
    description = "CC {{output}}"
    outputs =
        [ "{{source_out_dir}}/{{target_output_name}}.{{source_name_part}}.o" ]
  }


  tool("link") {
    outfile = "{{target_output_name}}{{output_extension}}"
    rspfile = "$outfile.rsp"
    command = "clang -o $outfile -Wl,--start-group @$rspfile -Wl,--end-group {{ldflags}}"
    description = "LINK $outfile"
    default_output_dir = "{{root_out_dir}}"
    rspfile_content = "{{inputs}}"
    outputs = [ outfile ]
  }
}
